<resources>
    <string name="app_name">Food Rush</string>
    <string name="mobile_no_log">Mobile Number(10 Digits)</string>
    <string name="password">Password</string>
    <string name="log_in">LOG IN</string>
    <string name="preference_file_name">Food Buff preference</string>
    <string name="preference"> Food Buff Name</string>
    <string name="forget_password"><u>Forgot Password?</u></string>
    <string name="register"><u>New Here? Register Here</u></string>
    <string name="name_hint">Name( Min. 3 Characters)</string>
    <string name="register_btn">REGISTER</string>
    <string name="email_address">Email Address</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="password_2">Password(Min 6 Characters)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_notice">Enter Your Registered Phone Number and Email Address Below:</string>
    <string name="next">NEXT</string>
    <string name="shared_preferences">RestaurantPreference</string>
    <string name="shared2">RestaurantPreference2</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="question1">Q1. How do I make a Order?</string>
    <string name="answer1">A1. Its a piece of cake once you have found your preferred restaurant simply select food items to order, and click "Place Order". Voila! Your order is now placed</string>
    <string name="question2">Q2. How do I reset my Account Password</string>
    <string name="answer2">A2. If you forgot your password, you can easily rest it by a OTP send to your registered email address. Simple click forgot password on Login Screen and Follow the steps on upcoming screens</string>
    <string name="question3">Q3. How long will it take for my Order to get Delivered</string>
    <string name="answer3">A3. Based on the proximity of the restaurant you are ordering from and the traffic to your location, this can typically take anywhere from 15 min to 40 min. Kindly call the restaurant to enquiry about the order</string>
    <string name="question4">Q4.I can not find my restaurant on the app </string>
    <string name="answer4">A4. We are constantly adding more partners. If you restaurant is not in the app, we are sorry but we currently do not supply from the restaurant.</string>
    <string name="question5">Q5. How can I check my previous orders?</string>
    <string name="answer5">A5. You can go to the Order History menu from Navigation Drawer. You will see all your previous orders and their details.</string>
    <string name="can_t_find_any_restaurant_with_that_name">Can\'t find any Restaurant with that name!!!</string>
    <string name="orderplaced">Order Received! \n Your Food is in the Making</string>
    <string name="proceed_to_cart">Proceed to Cart</string>
    <string name="choose_from_menu_listed_below">Choose from menu listed below:</string>
    <string name="add">Add</string>
    <string name="place_order">Place Order (Total: Rs)</string>
    <string name="ordering_from">Ordering From :</string>
    <string name="order_hist">Your Order History is as follows:</string>
    <string name="no_orders_placed">NO ORDERS PLACED</string>
    <string name="your_previous_orders_are_listed_below">Your previous orders are listed below:</string>
</resources>