<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.ForgotActivity">

    <RelativeLayout
        android:id="@+id/forgot_Progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:elevation="1dp"
        android:visibility="invisible">

        <ProgressBar
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerInParent="true" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/imgAppLogo"
        android:layout_width="240dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@mipmap/ic_main_icon_round" />

    <TextView
        android:id="@+id/txtForgotNotice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgAppLogo"
        android:layout_margin="10dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/forgot_notice"
        android:textColor="#fff"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtForgotNotice"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:background="#eeeeee"
        android:drawableStart="@drawable/ic_mobile"
        android:fontFamily="sans-serif-smallcaps"
        android:hint="@string/mobile_no_log"
        android:inputType="text"
        android:maxLines="1"
        android:padding="6dp"
        android:textColor="@color/black"
        android:textColorHint="#000000" />

    <EditText

        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etMobile"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:background="#eeeeee"
        android:drawableStart="@drawable/ic_email"
        android:fontFamily="sans-serif-smallcaps"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:padding="6dp"
        android:textColor="#000000"
        android:textColorHint="#000000" />

    <Button
        android:id="@+id/btnLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etEmail"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="7dp"
        android:backgroundTint="@color/colorHighlight"
        android:padding="6dp"
        android:text="@string/next"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold"
        android:theme="@style/Widget.MaterialComponents.Button" />

</RelativeLayout>