<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.RegisterActivity">

    <RelativeLayout
        android:id="@+id/register_Progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:elevation="1dp"
        android:visibility="invisible">

        <ProgressBar
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerInParent="true" />

    </RelativeLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="0dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                android:theme="@style/ThemeOverlay.AppCompat.Dark"
                app:layout_scrollFlags="scroll|enterAlways" />
        </com.google.android.material.appbar.AppBarLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
    <!--    <TextView-->
    <!--        android:id="@+id/txtHead"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="Register with these details"-->
    <!--        android:textSize="25sp"-->
    <!--        android:textStyle="bold"-->
    <!--        android:textColor="#fff"-->
    <!--        android:padding="20dp"-->
    <!--        />-->
    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/coordinatorLayout"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:background="#eeeeee"
        android:drawableStart="@drawable/ic_name"
        android:fontFamily="sans-serif-smallcaps"
        android:hint="@string/name_hint"
        android:inputType="text"
        android:maxLines="1"
        android:padding="6dp"
        android:textAlignment="center"
        android:textColor="#0B0B0B"
        android:textColorHint="#000000" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etName"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:background="#eeeeee"
        android:drawableStart="@drawable/ic_email"
        android:fontFamily="sans-serif-smallcaps"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:padding="6dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="#000000" />

    <EditText
        android:id="@+id/etMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etEmail"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:background="#eeeeee"
        android:drawableStart="@drawable/ic_mobile"
        android:fontFamily="sans-serif-smallcaps"
        android:hint="@string/mobile_no_log"
        android:inputType="text"
        android:maxLines="1"
        android:padding="6dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="#000000" />

    <EditText
        android:id="@+id/etDelivery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etMobile"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:background="#eeeeee"
        android:drawableStart="@drawable/ic_address"
        android:fontFamily="sans-serif-smallcaps"
        android:hint="@string/delivery_address"
        android:inputType="textPostalAddress"
        android:padding="6dp"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textColorHint="#000000" />

    <EditText
        android:id="@+id/etPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etDelivery"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:background="#eeeeee"
        android:drawableStart="@drawable/ic_pass"
        android:fontFamily="sans-serif-smallcaps"
        android:hint="@string/password_2"
        android:inputType="textPassword"
        android:padding="6dp"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textColorHint="#000000" />

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPass"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:background="#eeeeee"
        android:drawableStart="@drawable/ic_pass"
        android:fontFamily="sans-serif-smallcaps"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="6dp"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textColorHint="#000000" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etConfirmPassword"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="7dp"
        android:backgroundTint="@color/colorHighlight"
        android:padding="6dp"
        android:text="@string/register_btn"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold"
        android:theme="@style/Widget.MaterialComponents.Button" />
</RelativeLayout>